--- a/.travis.yml
+++ b/.travis.yml
@@ -52,18 +52,18 @@ matrix:
       addons:
         mariadb: 10.0
 
-    - php: 5.5
-      env: DB=mysql MARIADB=10.1
-      addons:
-        mariadb: 10.1
-    - php: 5.6
-      env: DB=mysql MARIADB=10.1
-      addons:
-        mariadb: 10.1
-    - php: 7.0
-      env: DB=mysql MARIADB=10.1
-      addons:
-        mariadb: 10.1
+#    - php: 5.5
+#      env: DB=mysql MARIADB=10.1
+#      addons:
+#        mariadb: 10.1
+#    - php: 5.6
+#      env: DB=mysql MARIADB=10.1
+#      addons:
+#        mariadb: 10.1
+#    - php: 7.0
+#      env: DB=mysql MARIADB=10.1
+#      addons:
+#        mariadb: 10.1
 
     - php: 5.5
       env: DB=pgsql POSTGRES=9.1
